--- a/package.json
+++ b/package.json
@@ -2,6 +2,31 @@
   "name": "games",
   "version": "0.1.0",
   "private": true,
+  "author": "react",
+  "description": "Games",
+  "homepage": "./",
+  "main": "src/electron-starter.js",
+  "scripts": {
+    "start": "nf start -p 3000",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-start": "node src/electron-wait-react",
+    "react-start": "react-scripts start",
+    "pack": "build --dir",
+    "dist": "npm run build && build",
+    "postinstall": "install-app-deps"
+},
+"build": {
+    "appId": "com.electron.electron-with-create-react-app",
+    "win": {
+        "iconUrl": "https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-256.png"
+    },
+    "directories": {
+        "buildResources": "build"
+    }
+},
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "^16.3.2",
@@ -11,10 +36,9 @@
     "react-scripts": "1.1.4",
     "redux": "4.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+
+  "devDependencies": {
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1"
   }
 }
